# cppnetworking

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  client.cpp  httpserver.cpp  server.cpp
example/public/: index.html  tictactoe.html
httpserver/: CMakeLists.txt  connection.cpp  connection.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpserver.cpp  httpserver.h
tcpclient/: CMakeLists.txt  tcpclient.cpp  tcpclient.h
tcpclient/lin/: lin.cpp  lin.h
tcpclient/mac/: mac.cpp  mac.h
tcpclient/win/: win.cpp  win.h
tcpserver/: CMakeLists.txt  tcpserver.cpp  tcpserver.h
tcpserver/lin/: lin.cpp  lin.h
tcpserver/mac/: mac.cpp  mac.h
tcpserver/win/: win.cpp  win.h
